# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initrd.sh:
  Fixed lvm/evms code for initrd generation. Thanks to Vinny
  <vfuria@gmail.com> on bug #179480 for pointing it out.

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  generic/initrd.defaults, ia64/modules_load, ppc/modules_load,
  ppc64/modules_load, um/modules_load, x86/modules_load,
  x86_64/modules_load, xen0/modules_load, xenU/modules_load:
  Added new PATA support from Paul Hewlett <paul@gccs.co.za> from bug #180111
  and also created a separate MDRAID module group.

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts, generic/linuxrc:
  Added a patch from Nelson Batalha <nelson_batalha@hotmail.com> from bug
  #174294 to enable the use of encryption on a CD and the location of a key.

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_determineargs.sh,
  gen_funcs.sh, genkernel, genkernel.8, genkernel.conf:
  Added two patches from John R. Graham <john_r_graham@mindspring.com> from
  bug #180161. This should fix bug #180161, bug #144703, and bug #150697.

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> x86/kernel-config-2.6:
  Added USB Printer support for bug #176543.

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Change the check for /livecd when booting a CD to check for a file called
  livecd, rather than just the existence of /livecd, which should keep it from
  finding disks with a /livecd directory.

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_package.sh:
  Added a patch from Andrew Gaffney <agaffney@gentoo.org> from bug #174188 to
  fix a problem with the System.map file copying that was previously
  introduced.

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.8:
  Added patch from Nelson Batalha <nelson_batalha@hotmail.com> from bug