@@ -86,7 +86,7 @@ BUSYBOX_CONFIG="${GK_SHARE}/%%ARCH%%/busy-config"
 BUSYBOX_VER="1.1.3+gentoo"
 # Busybox bin-cache location, to store pre-compiled busybox
 # binary is just a bzip2 busybox executable
-BUSYBOX_BINCACHE="%%CACHE%%/busybox-${BUSYBOX_VER}-%%ARCH%%.bz2"
+BUSYBOX_BINCACHE="%%CACHE%%/busybox-${BUSYBOX_VER}-%%ARCH%%.tar.bz2"
 # Location of BusyBox source tarball
 BUSYBOX_SRCTAR="${GK_SHARE}/pkg/busybox-${BUSYBOX_VER}.tar.bz2"
 # Directory created after busybox tarball is extracted
